# external_nng

./: Kconfig  Makefile
demo/nuttx/: CMakeLists.txt  task.c
include/nng/: nng.h
include/nng/supplemental/util/: options.h
src/: CMakeLists.txt
src/core/: dialer.c  listener.c  message.c  panic.c  pipe.c  socket.c  taskq.c  thread.c
src/nuttx/: CMakeLists.txt  nxipc.c  nxipc.h  nxtask.c  nxtask.h
src/platform/posix/: posix_config.h  posix_file.c  posix_ipclisten.c  posix_rand_getrandom.c  posix_rand_urandom.c  posix_thread.c
src/supplemental/util/: options.c
tests/: CMakeLists.txt
